kubernetes/media/apps/servarr/seerr.yaml
# TODO: This can be done with Kubernetes: https://docs.seerr.dev/getting-started/kubernetes

apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: seerr
  template:
    metadata:
      labels:
        app: seerr
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: seerr
          resources:
            requests:
              cpu: 10m
              memory: 256Mi
            limits:
              cpu: 300m
              memory: 640Mi
          image: ghcr.io/seerr-team/seerr:latest
          ports:
            - containerPort: 5055
              protocol: TCP
          volumeMounts:
            - mountPath: /app/config
              name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: seerr-config
---
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: media
spec:
  selector:
    app: seerr
  ports:
    - port: 5055
      targetPort: 5055
      protocol: TCP
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seerr
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Seerr
    gethomepage.dev/group: Servarr
    gethomepage.dev/icon: seerr
    # gethomepage.dev/widget.type: seerr
    # gethomepage.dev/widget.url: https://seerr.saturn.ong
    # gethomepage.dev/widget.key: "${SEERR_API_KEY}"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: 'traefik-forwardauth-authelia@kubernetescrd'
    external-dns.alpha.kubernetes.io/hostname: seerr.saturn.ong
    external-dns.alpha.kubernetes.io/target: direct.saturn.ong
spec:
  tls:
    - secretName: seerr.saturn.ong-tls
      hosts:
        - seerr.saturn.ong
  rules:
    - host: "seerr.saturn.ong"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: seerr
                port:
                  number: 5055
